# Path-Color-Switching

./: .gitignore  LICENSE  README.md  dune-project
lib/: colorFunction.ml  color_function.ml  dune  graph.ml  lib.ml  mySet.ml  shortest_path.ml  switch_graph.ml
lib/matrix/: adj_mat.ml  dune  floyd_warshall.ml  switch_graph.ml
lib/mdd/: adj_list.ml  dune  mdd.ml  stateMddSet.ml  stateMddSetAllDiff.ml  switch_graph_mdd.ml  switch_graph_mdd.mli
readme/: find_min_path_of_len_k.md  minimize_sw_path.md  prefixes.md
report/: Model.sty  bib.bib  coq_proof.v  main.tex  pres.tex  rapport.cls  variable.sty
report/appendix/: algoMinimizePath.tex  mdd.tex
report/appendix/mddPlots/: mddFull.tex  mddReduce1.tex  mddReduce2.tex  mddReduce3.tex  mddReduce4.tex
report/img/: matrix.tex  path_example.tex
report/img/tikz/: digraph.tex  graph_example.tex  mdd_example.tex  path_example.sty  path_example.tex
report/sections/: Benchmark.tex  Conclusion.tex  GeneralGraph.tex  Introduction.tex  MDD.tex  Matrices.tex  MinimizeSimpleGraphs.tex  MyImpl.tex  NValue.tex  Preliminaries.tex  References.bib  SimplePaths.tex
report/sections/stats/: all_diff.csv  number_of_paths_from_1.csv  path_number_plot.sty  path_number_plot.tex  time_classic.csv  time_plots.tex
report/slides/: 1prob_descr.tex  2minim_path.tex  3general_graph.tex  4stats.tex  5conclusion.tex
stats/: mdd.stat  path_number.txt  time_taken_alldiff_mode.txt  time_taken_classic_mode.txt
test/: FW.ml  col_switch.ml  dune  graph2.json  test.ml
