(library
 (name adj_list)
 (modules adj_list)
 (libraries colorFunction))

(library
 (name switch_graph_mdd)
 (modules switch_graph_mdd)
 (libraries yojson colorFunction adj_list mdd))

(library
 (name mdd)
 (modules mdd)
 (libraries colorFunction))

(library
 (name stateMddSet)
 (modules stateMddSet)
 (libraries mySet mdd))

(library
 (name stateMddSetAllDiff)
 (modules stateMddSetAllDiff)
 (libraries stateMddSet))
